--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,14 @@
     "@editorjs/image": "^2.10.2",
     "@editorjs/list": "^2.0.8",
     "@editorjs/paragraph": "^2.11.7",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
