--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
+    "plyr": "^3.7.8",
+    "plyr-react": "^5.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
