--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@editorjs/image": "^2.10.2",
     "@editorjs/list": "^2.0.8",
     "@editorjs/paragraph": "^2.11.7",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
