--- a/front-end/package.json
+++ b/front-end/package.json
@@ -34,6 +34,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.0",
