--- a/front-end/package.json
+++ b/front-end/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.4",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8"
   },
