--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "@editorjs/paragraph": "^2.11.7",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
@@ -31,6 +32,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.513.0",
+    "next-themes": "^0.4.6",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "react": "^19.1.0",
@@ -40,6 +42,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8"
