--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1"
   }
