--- a/front-end/package.json
+++ b/front-end/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.513.0",
+    "moment-timezone": "^0.6.0",
     "next-themes": "^0.4.6",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
