--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,6 +20,10 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "mongoose": "^8.15.1",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
+    "sitemap": "^8.0.0"
   }
 }
